# SpaceWars

./: CMakeLists.txt
include/: hideShow.h  tools.h
src/: SpaceWars.c  hideShow.c  tools.c
